# pfhub-cli-old

./: .coveragerc  .gitignore  .pylintrc  DEVELOPMENT.md  README.md  flake.nix  pyproject.toml  setup.cfg
.github/workflows/: conda.yml  flake-check.yml  nix.yml
_data/python-pfhub/: README.md
pfhub/: __init__.py  _version.py  convert.py  func.py  main.py  zenodo.py
pfhub/schema/: pfhub_schema.yaml
pfhub/scripts/: cli.py  test_cli.py
